force-app/main/default/objects/sfFma__FeatureParameter__c/sfFma__FeatureParameter__c.object-meta.xml
<CustomObject>
    <description>A custom object for storing feature parameters.  A new record is created of this object for every feature parameter that is ADDED as part of an uploaded package version. This record is automatically created upon the first package install of that package version.</description>
    <label>Feature Parameter</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Feature Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>