force-app/main/default/objects/sfFma__FeatureParameter__c/fields/sfFma__DataFlowDirection__c.field-meta.xml
<CustomField>
    <fullName>sfFma__DataFlowDirection__c</fullName>
    <description>Determines whether data flows from the ISV to the subscriber (Feature Setting) or from the subscriber to the ISV (Usage Metric</description>
    <label>Data Flow Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LMO to Subscriber</fullName>
            </value>
            <value>
                <fullName>Subscriber to LMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>