force-app/main/default/objects/sfFma__FeatureParameter__c/fields/sfFma__DataType__c.field-meta.xml
<CustomField>
    <fullName>sfFma__DataType__c</fullName>
    <description>Data type of the Feature Parameter.</description>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>