force-app/main/default/objects/sfFma__FeatureParameter__c/fields/sfFma__IntroducedInPackageVersion__c.field-meta.xml
<CustomField>
    <fullName>sfFma__IntroducedInPackageVersion__c</fullName>
    <description>The version of the package in which this feature parameter was first introduced</description>
    <label>Introduced in Package Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>