force-app/main/default/objects/sfFma__FeatureParameter__c/fields/sfFma__Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>sfFma__Namespace_Prefix__c</fullName>
    <description>Namespace prefix of the Feature Parameter.</description>
    <label>Namespace Prefix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>