force-app/main/default/objects/sfFma__FeatureParameter__c/fields/sfFma__Package__c.field-meta.xml
<CustomField>
    <fullName>sfFma__Package__c</fullName>
    <label>Package</label>
    <referenceTo>sfLma__Package__c</referenceTo>
    <relationshipLabel>Feature Parameters</relationshipLabel>
    <relationshipName>Feature_Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>