force-app/main/default/objects/sfFma__FeatureParameter__c/validationRules/sfFma__DataFlowDirectionUpdatePrevention.validationRule-meta.xml
<ValidationRule>
    <fullName>sfFma__DataFlowDirectionUpdatePrevention</fullName>
    <active>true</active>
    <description>Data Flow Direction can only be updated by the Feature Management App.</description>
    <errorConditionFormula>AND(  ISCHANGED( sfFma__DataFlowDirection__c ),
 $User.Id &lt;&gt;  CreatedById 
)</errorConditionFormula>
    <errorDisplayField>sfFma__DataFlowDirection__c</errorDisplayField>
    <errorMessage>This value is set by the installed package and cannot be changed. Click undo or cancel to continue.</errorMessage>
</ValidationRule>