force-app/main/default/objects/sfFma__FeatureParameter__c/validationRules/sfFma__DataTypeUpdatePrevention.validationRule-meta.xml
<ValidationRule>
    <fullName>sfFma__DataTypeUpdatePrevention</fullName>
    <active>true</active>
    <description>Data Type can only be created or updated by the Feature Management App.</description>
    <errorConditionFormula>AND( ISCHANGED( sfFma__DataType__c ),
 $User.Id &lt;&gt;  CreatedById )</errorConditionFormula>
    <errorDisplayField>sfFma__DataType__c</errorDisplayField>
    <errorMessage>This value is set by the installed package and cannot be changed. Click undo or cancel to continue.</errorMessage>
</ValidationRule>