force-app/main/default/objects/sfFma__FeatureParameter__c/listViews/sfFma__All.listView-meta.xml
<ListView>
    <fullName>sfFma__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>